crates/flowscope-core/tests/snapshots/completion_snapshots__snap_qualified_alias.snap
---
source: crates/flowscope-core/tests/completion_snapshots.rs
expression: result
---
{
  "clause": "select",
  "token": {
    "value": ".",
    "kind": "symbol",
    "span": {
      "start": 8,
      "end": 9
    }
  },
  "shouldShow": true,
  "items": [
    {
      "label": "email",
      "insertText": "email",
      "kind": "column",
      "category": "column",
      "score": 1050,
      "clauseSpecific": true,
      "detail": "varchar"
    },
    {
      "label": "id",
      "insertText": "id",
      "kind": "column",
      "category": "column",
      "score": 1050,
      "clauseSpecific": true,
      "detail": "integer"
    },
    {
      "label": "name",
      "insertText": "name",
      "kind": "column",
      "category": "column",
      "score": 1050,
      "clauseSpecific": true,
      "detail": "varchar"
    }
  ]
}
